# Ping_Cpp

./: .gitignore  Bat.cpp  Bat.h  CMakelists.txt  Plan.txt  README.md  main.cpp
Test_SFML/: main.cpp  sfml-app
app/: CMakeLists.txt  main.cpp
include/: Ball.hpp  Bat.hpp  Game.hpp  GameLibrary.hpp  InitMenu.hpp  Player.hpp  StructGame.hpp
src/: Ball.cpp  Bat.cpp  CMakeLists.txt  GameLibrary.cpp  InitMenu.cpp  StructGame.cpp
test/: CMakelists.txt  SFML.cpp
